[package]
name = "vec-option"
version = "0.3.0"
authors = ["Ozaren <krishna.sd.2012@gmail.com>"]
edition = "2018"
description = 'A space optimized version of `Vec<Option<T>>` that stores the discriminant seperately'
license = 'MIT'
readme = 'README.md'
repository = "https://github.com/RustyYato/vec-option"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]

nightly = []

[dependencies]